Fix to fully hide frame when collapsed in IE/Edge

--- a/app/styles/stream.styl
+++ b/app/styles/stream.styl
@@ -28,6 +28,7 @@
         display: initial
       &.closed
         display: block
+        visibility: hidden
         opacity: 0
         max-height: 0px
         margin-bottom: 31px
